src/main/resources/scss/modeled-content/_editor.scss
.modeled.editor {
	border: 1px solid black;
	background: #fff;

	[contenteditable] {
		min-height: 3rem;
		padding: 0.6rem;
		&:focus {
			outline: none;
		}
	}

	$formats: bold,italic,underline;
	@each $format in $formats {
		button[data-format=#{$format}] {
			@extend .icon-editor-#{$format};
		}
		&.format-#{$format} button[data-format=#{$format}] {
			@extend .icon-editor-#{$format}-active;
		}
	}

	.toolbar {
		border: 0 solid $border-grey;
		border-top-width: 1px;
		background: $panel-background;
		button {
			color: $secondary-grey;
			font-weight: bold;
			margin: 0;
			padding: 0.5rem 0.8rem;
			background: {
				color: $panel-background;
				repeat: no-repeat;
				position: center center;
			}
			text-indent: -100px;
			overflow: hidden;
		}
	}
}

